fixing spacing

--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,11 @@ button {
     margin-right: 25%;
     display: inline-block;
     vertical-align: top;
-    align-items: center;
+    flex-direction: column;
+  }
+
+  main {
+    margin-left: 15%;
+    margin-right: 15%;
   }
 }
